@@ -22,4 +22,3 @@
 Ice.Plugin.IceSSL=IceSSL.PluginFactory
 IceSSL.Password=password
 IceSSL.Keystore=client.jks
-IceSSL.Truststore=client.jks
