@@ -43,4 +43,3 @@ Ice.Plugin.IceSSL=IceSSL.PluginFactory
 IceSSL.DefaultDir=../../../../certs
 IceSSL.Keystore=server.jks
 IceSSL.Password=password
-IceSSL.Truststore=certs.jks
